# rs-rdc-macros

./: Cargo.toml  README.md
src/: codegen.rs  lib.rs  utils.rs
src/codegen/: data_enums.rs  structs.rs  unit_enums.rs
src/targets/: java.rs
