[package]
name = "rdc-macros"
version = "0.1.0"
edition = "2021"
authors = ["Szymon Dziwak"]
description = "Macros for rdc crate"
license = "MIT"
repository = "https://github.com/skdziwak/rs-rdc-macros"

[dependencies]
syn = "1.0.107"
quote = "1.0.23"
proc-macro2 = "1.0.27"

[lib]
proc-macro = true
